RESOLVED FIXED 262046
Treat huge 'repeatCount' values as invalid
https://bugs.webkit.org/show_bug.cgi?id=262046
Summary Treat huge 'repeatCount' values as invalid
Ahmad Saleem
Reported 2023-09-25 08:28:05 PDT
Hi Team, Came across another failing WPT test and also Blink merge: Blink Commit: https://chromium.googlesource.com/chromium/src/+/8fcb33ec493a697c5973fed3fa3afaf77bf626db WebKit Source Code: https://searchfox.org/wubkat/source/Source/WebCore/svg/animation/SVGSMILElement.cpp#722 ^ Just adding '&& std::isfinite(result)'. Test Case: In URL (Timeout in Safari / WebKit ToT) Local build confirmed that it make us pass the test case. Just raising so can fix it.
Attachments
EWS
Comment 1 2023-09-25 16:42:03 PDT
Committed 268420@main (67ce0e567581): <https://commits.webkit.org/268420@main> Reviewed commits have been landed. Closing PR #18165 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2023-09-25 16:43:13 PDT
Note You need to log in before you can comment on or make changes to this bug.