Treat huge 'repeatCount' values as invalid

https://bugs.webkit.org/show_bug.cgi?id=262046

Reviewed by Said Abou-Hallawa.

This patch aligns WebKit with Blink / Chromium and Gecko / Firefox.

Merge: https://chromium.googlesource.com/chromium/src/+/8fcb33ec493a697c5973fed3fa3afaf77bf626db

String::toDouble() can return infinity. This value could either be
treated the same as the 'indefinite' keyword or as invalid. Gecko
appears do the latter so follow suit. It is match Blink and Gecko.

* Source/WebCore/svg/animation/SVGSMILElement.cpp:
(SVGSMILElement::repeatCount):
* LayoutTests/imported/w3c/web-platform-tests/svg/animations/repeatcount-numeric-limit.tentative.svg: Add Test Case
* LayoutTests/imported/w3c/web-platform-tests/svg/animations/repeatcount-numeric-limit.tentative-expected.txt: Add Test Case Expectation

Canonical link: https://commits.webkit.org/268420@main